# copper

./: .env.example  .gitignore  noxfile.py  pyproject.toml  scrapy.cfg  settings.py  settings.yml
src/copper/: __main__.py  settings.py
src/copper/config/: database.py  settings_extractor.py
src/copper/console/logging/: alert.py
src/copper/utils/: __init__.py  domain_handler.py  domain_parser.py  helper_spiders.py  spiders_handler.py
