[tool.poetry]
name = "copper"
version = "0.1.0"
description = "Tracker price"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Leonardofreua/copper"
repository = "https://github.com/Leonardofreua/copper"
authors = ["Leonardo Freua <leonardo.batista.freua@gmail.com.br>"]
keywords = ["copper", "tracker", "price", "tracker-price", "monitoring"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
sqlalchemy = "^1.3.19"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-mock = "^3.3.1"
coverage = {extras = ["toml"], version = "^5.0.1"}
flake8 = "^3.8.3"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.1.4"
flake8-bandit = "^2.1.2"
safety = "^1.9.0"
mypy = "^0.782"
black = {version = "^19.10b0", allow-prereleases = true}
pre-commit = "^2.7.1"
nox = "^2020.8.22"
pytype = {version = "^2020.8.17", python = "3.7"}
typeguard = "^2.9.1"

[tool.poetry.scripts]
copper = "copper.application:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["copper"]
omit = ["*/__init__.py",
        "*/__version__.py",
        "*/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
